{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 54,
  "lineage": "8522d71f-61d0-8abb-9ebb-ac1f4199eb5d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:security-group/sg-056315e9c0e5130c2",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-056315e9c0e5130c2",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "836052629367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "testing-default"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-default"
            },
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:internet-gateway/igw-0daa8e8f25c48e385",
            "id": "igw-0daa8e8f25c48e385",
            "owner_id": "836052629367",
            "tags": {
              "Environment": "test",
              "Name": "testing-internet-gateway"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-internet-gateway"
            },
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:route-table/rtb-05a88f9687e0bb25b",
            "id": "rtb-05a88f9687e0bb25b",
            "owner_id": "836052629367",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test",
              "Name": "testing-protected"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-protected"
            },
            "timeouts": null,
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "general-data",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:route-table/rtb-04696074898b21688",
            "id": "rtb-04696074898b21688",
            "owner_id": "836052629367",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test",
              "Name": "testing-general-data"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-general-data"
            },
            "timeouts": null,
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-private",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:route-table/rtb-0d25b7724032d0b03",
            "id": "rtb-0d25b7724032d0b03",
            "owner_id": "836052629367",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test",
              "Name": "testing-general-private"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-general-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:route-table/rtb-0b4f92467575cc568",
            "id": "rtb-0b4f92467575cc568",
            "owner_id": "836052629367",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test",
              "Name": "testing-general-public"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-general-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "transit-gateway-transit-gateway",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:route-table/rtb-06b57bc8bed5ee041",
            "id": "rtb-06b57bc8bed5ee041",
            "owner_id": "836052629367",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test",
              "Name": "testing-transit-gateway-transit-gateway"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-transit-gateway-transit-gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "protected-eu-west-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014ce4c5fc4fd820f",
            "route_table_id": "rtb-05a88f9687e0bb25b",
            "subnet_id": "subnet-00df9180afd2c40d1"
          },
          "dependencies": [
            "aws_route_table.protected",
            "aws_subnet.protected",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "protected-eu-west-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd2ef328e78f9c11",
            "route_table_id": "rtb-05a88f9687e0bb25b",
            "subnet_id": "subnet-0b4ead578c7db9e9d"
          },
          "dependencies": [
            "aws_route_table.protected",
            "aws_subnet.protected",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "protected-eu-west-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b85515d27ef3e69",
            "route_table_id": "rtb-05a88f9687e0bb25b",
            "subnet_id": "subnet-0e8217a4b3d86b7ea"
          },
          "dependencies": [
            "aws_route_table.protected",
            "aws_subnet.protected",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "general-data-eu-west-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e1aaaa10a773f1d",
            "route_table_id": "rtb-04696074898b21688",
            "subnet_id": "subnet-0d6a9c511906ff131"
          },
          "dependencies": [
            "aws_route_table.route_tables",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-data-eu-west-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073a525e119ce59fa",
            "route_table_id": "rtb-04696074898b21688",
            "subnet_id": "subnet-011c90637773b7dcd"
          },
          "dependencies": [
            "aws_route_table.route_tables",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-data-eu-west-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d107390c919051d0",
            "route_table_id": "rtb-04696074898b21688",
            "subnet_id": "subnet-0cb80c0af245de2ea"
          },
          "dependencies": [
            "aws_route_table.route_tables",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-private-eu-west-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f7ff31aeaff989d",
            "route_table_id": "rtb-0d25b7724032d0b03",
            "subnet_id": "subnet-04779f6fc1709d78f"
          },
          "dependencies": [
            "aws_route_table.route_tables",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-private-eu-west-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e821e5d0bdf83d68",
            "route_table_id": "rtb-0d25b7724032d0b03",
            "subnet_id": "subnet-0aee0a7b0321938a9"
          },
          "dependencies": [
            "aws_route_table.route_tables",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-private-eu-west-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085d32b6343b4fe20",
            "route_table_id": "rtb-0d25b7724032d0b03",
            "subnet_id": "subnet-0141a3257e20c6d84"
          },
          "dependencies": [
            "aws_route_table.route_tables",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-public-eu-west-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070c3a24b79efbb61",
            "route_table_id": "rtb-0b4f92467575cc568",
            "subnet_id": "subnet-0ec130991ccf37ffb"
          },
          "dependencies": [
            "aws_route_table.route_tables",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-public-eu-west-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3c7e990f0b159fa",
            "route_table_id": "rtb-0b4f92467575cc568",
            "subnet_id": "subnet-0129370a57f63a052"
          },
          "dependencies": [
            "aws_route_table.route_tables",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-public-eu-west-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7b668ff1dc47774",
            "route_table_id": "rtb-0b4f92467575cc568",
            "subnet_id": "subnet-0f4a18c65df5f7c76"
          },
          "dependencies": [
            "aws_route_table.route_tables",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "transit-gateway-eu-west-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095d427058d85f2b6",
            "route_table_id": "rtb-06b57bc8bed5ee041",
            "subnet_id": "subnet-0438309613d478414"
          },
          "dependencies": [
            "aws_route_table.route_tables",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "transit-gateway-eu-west-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d36cd1f8634b0e5",
            "route_table_id": "rtb-06b57bc8bed5ee041",
            "subnet_id": "subnet-040a4a97b11ed8913"
          },
          "dependencies": [
            "aws_route_table.route_tables",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "transit-gateway-eu-west-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bd1c65ff71070ae",
            "route_table_id": "rtb-06b57bc8bed5ee041",
            "subnet_id": "subnet-0d04a925b874a278d"
          },
          "dependencies": [
            "aws_route_table.route_tables",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:security-group/sg-08be60faaa633c21e",
            "description": "Control interface traffic",
            "egress": [],
            "id": "sg-08be60faaa633c21e",
            "ingress": [],
            "name": "testing-int-endpoint",
            "name_prefix": "",
            "owner_id": "836052629367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "testing-int-endpoint"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-int-endpoint"
            },
            "timeouts": null,
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "endpoints_ingress_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "general",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow inbound HTTPS",
            "from_port": 443,
            "id": "sgrule-612175143",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08be60faaa633c21e",
            "security_group_rule_id": "sgr-0e6cf6f9d91994c09",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_vpc.vpc",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "endpoints_ingress_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "general",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow inbound SMTP",
            "from_port": 25,
            "id": "sgrule-2784489240",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08be60faaa633c21e",
            "security_group_rule_id": "sgr-0f4cac521a3424391",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 25,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_vpc.vpc",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "endpoints_ingress_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "general",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow inbound SMTP-TLS",
            "from_port": 587,
            "id": "sgrule-3764828013",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08be60faaa633c21e",
            "security_group_rule_id": "sgr-0c6192e90ae4fd261",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 587,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_vpc.vpc",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "endpoints_ingress_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "general",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow inbound Redshift",
            "from_port": 5439,
            "id": "sgrule-523352660",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08be60faaa633c21e",
            "security_group_rule_id": "sgr-062846791238bca3c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5439,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_vpc.vpc",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "protected-eu-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:subnet/subnet-00df9180afd2c40d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.192.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00df9180afd2c40d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836052629367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "testing-protected-eu-west-2a"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-protected-eu-west-2a"
            },
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "protected-eu-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:subnet/subnet-0b4ead578c7db9e9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.208.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4ead578c7db9e9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836052629367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "testing-protected-eu-west-2b"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-protected-eu-west-2b"
            },
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "protected-eu-west-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:subnet/subnet-0e8217a4b3d86b7ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.224.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8217a4b3d86b7ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836052629367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "testing-protected-eu-west-2c"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-protected-eu-west-2c"
            },
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "general-data-eu-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:subnet/subnet-0d6a9c511906ff131",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6a9c511906ff131",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836052629367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "testing-general-data-eu-west-2a"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-general-data-eu-west-2a"
            },
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-data-eu-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:subnet/subnet-011c90637773b7dcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011c90637773b7dcd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836052629367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "testing-general-data-eu-west-2b"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-general-data-eu-west-2b"
            },
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-data-eu-west-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:subnet/subnet-0cb80c0af245de2ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.176.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb80c0af245de2ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836052629367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "testing-general-data-eu-west-2c"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-general-data-eu-west-2c"
            },
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-private-eu-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:subnet/subnet-04779f6fc1709d78f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04779f6fc1709d78f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836052629367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "testing-general-private-eu-west-2a"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-general-private-eu-west-2a"
            },
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-private-eu-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:subnet/subnet-0aee0a7b0321938a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aee0a7b0321938a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836052629367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "testing-general-private-eu-west-2b"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-general-private-eu-west-2b"
            },
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-private-eu-west-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:subnet/subnet-0141a3257e20c6d84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0141a3257e20c6d84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836052629367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "testing-general-private-eu-west-2c"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-general-private-eu-west-2c"
            },
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-public-eu-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:subnet/subnet-0ec130991ccf37ffb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec130991ccf37ffb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836052629367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "testing-general-public-eu-west-2a"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-general-public-eu-west-2a"
            },
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-public-eu-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:subnet/subnet-0129370a57f63a052",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0129370a57f63a052",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836052629367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "testing-general-public-eu-west-2b"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-general-public-eu-west-2b"
            },
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "general-public-eu-west-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:subnet/subnet-0f4a18c65df5f7c76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4a18c65df5f7c76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836052629367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "testing-general-public-eu-west-2c"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-general-public-eu-west-2c"
            },
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "transit-gateway-eu-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:subnet/subnet-0438309613d478414",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.240.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0438309613d478414",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836052629367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "testing-transit-gateway-eu-west-2a"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-transit-gateway-eu-west-2a"
            },
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "transit-gateway-eu-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:subnet/subnet-040a4a97b11ed8913",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.242.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040a4a97b11ed8913",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836052629367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "testing-transit-gateway-eu-west-2b"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-transit-gateway-eu-west-2b"
            },
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "transit-gateway-eu-west-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:subnet/subnet-0d04a925b874a278d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.244.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d04a925b874a278d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836052629367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "testing-transit-gateway-eu-west-2c"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-transit-gateway-eu-west-2c"
            },
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipv4_cidr_block_association.subnet_sets",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:vpc/vpc-0054308c4b7ed3d6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ff74f98a01823cca",
            "default_route_table_id": "rtb-0d179c88b2e4d3df7",
            "default_security_group_id": "sg-056315e9c0e5130c2",
            "dhcp_options_id": "dopt-99969af1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0054308c4b7ed3d6f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d179c88b2e4d3df7",
            "owner_id": "836052629367",
            "tags": {
              "Environment": "test",
              "Name": "testing"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing"
            }
          },
          "dependencies": [
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_interfaces",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "com.amazonaws.eu-west-2.ec2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:vpc-endpoint/vpce-0bedb337a5f29da6b",
            "dns_entry": [
              {
                "dns_name": "vpce-0bedb337a5f29da6b-s1m46m9s.ec2.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0bedb337a5f29da6b-s1m46m9s-eu-west-2b.ec2.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0bedb337a5f29da6b-s1m46m9s-eu-west-2c.ec2.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0bedb337a5f29da6b-s1m46m9s-eu-west-2a.ec2.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ec2.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z080387130EBGMMU7EBO7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bedb337a5f29da6b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0590d22c1e87127ed",
              "eni-09b730e286e0f46c9",
              "eni-0e95cf36e74c04937"
            ],
            "owner_id": "836052629367",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08be60faaa633c21e"
            ],
            "service_name": "com.amazonaws.eu-west-2.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-00df9180afd2c40d1",
              "subnet-0b4ead578c7db9e9d",
              "subnet-0e8217a4b3d86b7ea"
            ],
            "tags": {
              "Environment": "test",
              "Name": "testing-com.amazonaws.eu-west-2.ec2"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-com.amazonaws.eu-west-2.ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_subnet.protected",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:vpc-endpoint/vpce-07d5ec4ba1baedcdc",
            "dns_entry": [
              {
                "dns_name": "vpce-07d5ec4ba1baedcdc-c77iydkl.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-07d5ec4ba1baedcdc-c77iydkl-eu-west-2c.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-07d5ec4ba1baedcdc-c77iydkl-eu-west-2b.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-07d5ec4ba1baedcdc-c77iydkl-eu-west-2a.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ec2messages.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z079935721E6LAE5QG49I"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07d5ec4ba1baedcdc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01d1e6f87bb631eab",
              "eni-026b0b983dd829b91",
              "eni-0564785b40ae31a2e"
            ],
            "owner_id": "836052629367",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08be60faaa633c21e"
            ],
            "service_name": "com.amazonaws.eu-west-2.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-00df9180afd2c40d1",
              "subnet-0b4ead578c7db9e9d",
              "subnet-0e8217a4b3d86b7ea"
            ],
            "tags": {
              "Environment": "test",
              "Name": "testing-com.amazonaws.eu-west-2.ec2messages"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-com.amazonaws.eu-west-2.ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_subnet.protected",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:vpc-endpoint/vpce-0b8c568e3639d7189",
            "dns_entry": [
              {
                "dns_name": "vpce-0b8c568e3639d7189-i2mc32h6.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0b8c568e3639d7189-i2mc32h6-eu-west-2a.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0b8c568e3639d7189-i2mc32h6-eu-west-2c.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0b8c568e3639d7189-i2mc32h6-eu-west-2b.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ssm.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z02200691474CSJBQZIVM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b8c568e3639d7189",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03f8cb58ebbe64c45",
              "eni-043c1bb016cd0c0cc",
              "eni-0a335181e0f666cfb"
            ],
            "owner_id": "836052629367",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08be60faaa633c21e"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-00df9180afd2c40d1",
              "subnet-0b4ead578c7db9e9d",
              "subnet-0e8217a4b3d86b7ea"
            ],
            "tags": {
              "Environment": "test",
              "Name": "testing-com.amazonaws.eu-west-2.ssm"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-com.amazonaws.eu-west-2.ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_subnet.protected",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:vpc-endpoint/vpce-0ad25aa25ddd8294c",
            "dns_entry": [
              {
                "dns_name": "vpce-0ad25aa25ddd8294c-773kxbyv.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0ad25aa25ddd8294c-773kxbyv-eu-west-2b.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0ad25aa25ddd8294c-773kxbyv-eu-west-2a.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0ad25aa25ddd8294c-773kxbyv-eu-west-2c.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ssmmessages.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z08108491LSDDIVQ0TK80"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ad25aa25ddd8294c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00d52f06c6072f8f9",
              "eni-047e5b53616381c5b",
              "eni-048799427b04755e5"
            ],
            "owner_id": "836052629367",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08be60faaa633c21e"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-00df9180afd2c40d1",
              "subnet-0b4ead578c7db9e9d",
              "subnet-0e8217a4b3d86b7ea"
            ],
            "tags": {
              "Environment": "test",
              "Name": "testing-com.amazonaws.eu-west-2.ssmmessages"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-com.amazonaws.eu-west-2.ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_subnet.protected",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:836052629367:vpc-endpoint/vpce-0ebcf2c1cc93779cf",
            "cidr_blocks": [
              "52.95.150.0/24",
              "52.95.191.0/24",
              "52.95.142.0/23",
              "16.12.16.0/23",
              "3.5.244.0/22",
              "52.219.219.0/24",
              "52.95.144.0/24",
              "52.95.148.0/23",
              "16.12.15.0/24"
            ],
            "id": "vpce-0ebcf2c1cc93779cf",
            "owner_id": "836052629367",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ca54015",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-04696074898b21688",
              "rtb-06b57bc8bed5ee041",
              "rtb-0b4f92467575cc568",
              "rtb-0d25b7724032d0b03"
            ],
            "service_name": "com.amazonaws.eu-west-2.s3",
            "state": "available",
            "tags": {
              "Environment": "test",
              "Name": "testing-com.amazonaws.eu-west-2.s3"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "testing-com.amazonaws.eu-west-2.s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0054308c4b7ed3d6f"
          },
          "dependencies": [
            "aws_route_table.route_tables",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_secretsmanager_secret.environment_management",
            "data.aws_secretsmanager_secret_version.environment_management",
            "data.aws_ssm_parameter.environment_management_arn"
          ]
        }
      ]
    }
  ]
}